fix: changed header z-index to 1

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -8,7 +8,7 @@ header {
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 1000; /* Ensures the header stays above other content */
+    z-index: 1; /* Ensures the header stays above other content */
 }
 
 nav {
